--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@nuxt/eslint": "latest",
     "@types/eslint-plugin-tailwindcss": "^3.17.0",
+    "@types/ws": "^8.5.14",
     "@vueuse/core": "^12.5.0",
     "@vueuse/nuxt": "^12.5.0",
     "eslint": "^9.17.0",
