--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
     "lint": "eslint ."
   },
   "devDependencies": {
+    "@libredash/core": "github:LibreDash/core",
     "@nuxt/eslint": "latest",
     "@types/eslint-plugin-tailwindcss": "^3.17.0",
     "@types/ws": "^8.5.14",
-    "@vueuse/core": "^12.5.0",
-    "@vueuse/nuxt": "^12.5.0",
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
@@ -27,9 +26,5 @@
     "typescript": "^5.7.2",
     "vue": "latest"
   },
-  "packageManager": "pnpm@9.14.3+sha512.c0f53ee99477ed969b82b289ad011a5d16bf1623c957e7f29eabe8d0c00b574c29b8c7f54f6c67ee710c73f285c8154d07ce44b46fe2c0eeb476a90441bac371",
-  "dependencies": {
-    "nitro": "^0.0.0",
-    "ws": "^8.18.0"
-  }
+  "packageManager": "pnpm@9.14.3+sha512.c0f53ee99477ed969b82b289ad011a5d16bf1623c957e7f29eabe8d0c00b574c29b8c7f54f6c67ee710c73f285c8154d07ce44b46fe2c0eeb476a90441bac371"
 }
